# rust-ssd

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: training_config.json
scripts/: get_models.sh  log_to_csv.sh  plot_loss.py
src/: boxes.rs  coco_labels.rs  config.rs  data.rs  dataset.rs  debug.rs  inference.rs  labels.rs  layers.rs  lib.rs  loss.rs  main.rs  nms.rs  stats.rs  torch_ops.rs  training.rs
src/models/: mod.rs  ssd.rs  ssd_prediction_head.rs  vgg.rs
src/transforms/: clean_boxes.rs  crop.rs  flip.rs  mod.rs  normalize.rs  photometric.rs  pipeline.rs  resize.rs  save_image.rs  zoom_out.rs
