[package]
name = "rust-ssd"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]

image = "0.25.6"
num = "0.4.3"
rand = "0.9.2"
imageproc = "0.25.0"
ab_glyph = "0.2.31"
argh = "0.1.13"
burn = { version = "0.18.0", features = [
    "dataset",
    "train",
    "ndarray",
    "cuda",
    "tch",
    "vision",
] }
itertools = "0.14.0"
chrono = "0.4.41"
